wine/static/wine/style.css
body    {
font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
}

.container {
max-width: 1400px;
margin: auto;
}

.logincontainer {
max-width: 300px;
margin: auto;
width: 50%;
border: 1px solid #ccc;
border-radius: 25px;
padding: 10px;
}

.content    {
margin: 20px;
}

.top-bar, .top-bar ul {
background-color: #f8f9fa;
line-height: 1.5;
font-size: 1.25rem;

}

th, td   {
font-size: 14px;
}

table.hover tbody tr:hover {
}

a {
    text-decoration: none;
}

a, a:link, visited {
    text-decoration: none;
}

label {
font-size: 1rem;
}

input, select, textarea   {
width: 100%;
}

input[type="search"] {
	max-width: 300px;
}

.reveal {
    top: 100px !important;
}

#id_purchase_year,
#id_purchase_month,
#id_purchase_day    {
    max-width: 180px;
}

.dates {
font-size: 10px;
}

.winelog {
font-size: 14px;
}
details {
    list-style: none;
}

summary {
    text-decoration: none;
}

details > summary {
    border: none;
    list-style: none;
}

details > summary::-webkit-details-marker {
    display: none;
}

details > p {
}

details[open] > summary {
 width: 300px;
}

details[open] {
    padding: 5px;
    padding-left: 20px;
    background-color: #ececec;
    animation: sliding 0.5s forwards;
}

@keyframes sliding {
  0%   {top: 0px; width: 100px;}
  100% {width: 300px;}
}

.hiddenRow {
    padding: 0 !important;
}

